--- a/ai-recommender/src/main/resources/application.properties
+++ b/ai-recommender/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ai-recommender
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
+spring.datasource.username=your_username
+spring.datasource.password=your_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
