--- a/ai-recommender/src/main/resources/application.properties
+++ b/ai-recommender/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.show-actuator=true
